// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component.Pay.PayPanelBody current step is not summary should render correctly 1`] = `
<Fragment>
  <PayHelpText
    chainName="Bitcoin"
    cryptoUnitName="satoshi"
    currentStep="amount"
    previousStep={null}
    redirectPayReq={null}
  />
  <PayAddressField
    chain="testnet"
    currentStep="amount"
    handlePayReqChange={[Function]}
    intl={Object {}}
    network=""
    redirectPayReq={null}
  />
  <PayAmountFields
    cryptoUnit="sats"
    currentStep="amount"
    formApi={Object {}}
    initialAmountCrypto={null}
    initialAmountFiat={null}
    intl={Object {}}
    lndTargetConfirmations={
      Object {
        "fast": 10,
        "medium": 5,
        "slow": 1,
      }
    }
    onchainFees={Object {}}
    queryFees={[Function]}
    walletBalanceConfirmed={1}
  />
  <PaySummaryWithTransition
    amountInSats={1}
    currentStep="amount"
    formApi={Object {}}
    lndTargetConfirmations={
      Object {
        "fast": 10,
        "medium": 5,
        "slow": 1,
      }
    }
    routes={Array []}
  />
</Fragment>
`;

exports[`component.Pay.PayPanelBody current step is summary should render correctly 1`] = `
<Fragment>
  <PayHelpText
    chainName="Bitcoin"
    cryptoUnitName="satoshi"
    currentStep="summary"
    previousStep={null}
    redirectPayReq={null}
  />
  <PayAddressField
    chain="testnet"
    currentStep="summary"
    handlePayReqChange={[Function]}
    intl={Object {}}
    network=""
    redirectPayReq={null}
  />
  <PayAmountFields
    cryptoUnit="sats"
    currentStep="summary"
    formApi={Object {}}
    initialAmountCrypto={null}
    initialAmountFiat={null}
    intl={Object {}}
    lndTargetConfirmations={
      Object {
        "fast": 10,
        "medium": 5,
        "slow": 1,
      }
    }
    onchainFees={Object {}}
    queryFees={[Function]}
    walletBalanceConfirmed={1}
  />
  <PaySummaryWithTransition
    amountInSats={1}
    currentStep="summary"
    formApi={Object {}}
    lndTargetConfirmations={
      Object {
        "fast": 10,
        "medium": 5,
        "slow": 1,
      }
    }
    routes={Array []}
  />
</Fragment>
`;
